--- a/vue/css/style_achat.css
+++ b/vue/css/style_achat.css
@@ -284,9 +284,9 @@ body {
 }
 
 img {
-  max-width: 100%;
   vertical-align: middle;
-  display: inline-block
+  display: inline-block;
+  height: 100%;
 }
 
 html.w-mod-touch * {
@@ -2786,6 +2786,7 @@ textarea.w-select {
 
 .logo {
   height: 90%;
+  width: auto;
 }
 
 .search_part {
@@ -2980,7 +2981,7 @@ textarea.w-select {
 }
 
 .caddie_logo {
-  height: 100%;
+  height: 90%;
   margin-left: 5px;
 }
 
@@ -2999,7 +3000,7 @@ textarea.w-select {
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
   text-align: center;
 }
@@ -3623,6 +3624,7 @@ textarea.w-select {
 
 .infos_articles_panier {
   margin-right: 5px;
+  max-width: 40%;
 }
 
 .link-block {
