--- a/vue/css/style_accueil.css
+++ b/vue/css/style_accueil.css
@@ -279,9 +279,9 @@ body {
 }
 
 img {
-  max-width: 100%;
   vertical-align: middle;
-  display: inline-block
+  display: inline-block;
+  height: 100%;
 }
 
 html.w-mod-touch * {
@@ -2771,6 +2771,7 @@ textarea.w-select {
 
 .logo {
   height: 90%;
+  width: auto;
 }
 
 .search_part {
@@ -2965,7 +2966,7 @@ textarea.w-select {
 }
 
 .caddie_logo {
-  height: 100%;
+  height: 90%;
   margin-left: 5px;
 }
 
@@ -2984,7 +2985,7 @@ textarea.w-select {
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
   text-align: center;
 }
@@ -3082,3 +3083,559 @@ textarea.w-select {
   font-size: 17px;
   text-align: center;
 }
+
+.article {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  min-width: 15%;
+  padding: 15px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border: 1px solid #000;
+  border-radius: 7px;
+  background-color: #fbf5f3;
+}
+
+.details_article {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.img_article {
+  width: 80%;
+  height: 51.80851685143226%;
+  max-height: 51.80851685143226%;
+  max-width: 80%;
+  min-height: 51.80851685143226%;
+  min-width: 80%;
+  text-align: center;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.nom_article {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.prix-achat {
+  position: static;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.text-block-9 {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.div-block-12 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
+.infos_article {
+  width: 50%;
+  height: 100%;
+}
+
+.text-block-10 {
+  margin-left: 5px;
+}
+
+.achat {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70px;
+  height: 40px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-self: auto;
+  -ms-flex-item-align: auto;
+  align-self: auto;
+  border-radius: 15px;
+  background-color: #ff4009;
+}
+
+.caddie_icon {
+  height: 100%;
+  margin-right: 10px;
+  text-align: left;
+}
+
+.text-block-11 {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.prix {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.div-block-14 {
+  margin-right: 10px;
+  padding: 5px 7px;
+  border-radius: 15px;
+  background-color: #ff4009;
+}
+
+.text-block-13 {
+  color: #fff;
+}
+
+.text-block-14 {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+  text-decoration: line-through;
+}
+
+.reduction {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 10px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.articles {
+  position: relative;
+  z-index: 0;
+  display: -ms-grid;
+  display: grid;
+  overflow: visible;
+  width: 100%;
+  height: auto;
+  padding: 5% 7%;
+  -webkit-box-align: start;
+  -webkit-align-items: start;
+  -ms-flex-align: start;
+  align-items: start;
+  -webkit-align-content: start;
+  -ms-flex-line-pack: start;
+  align-content: start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 7em;
+  grid-row-gap: 5em;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  -ms-grid-rows: auto auto auto;
+  grid-template-rows: auto auto auto;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#affichage_apercu_panier {
+  display: none;
+}
+
+.apercu_panier {
+  position: fixed;
+  left: auto;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  z-index: 999;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  background-color: #fbf5f3;
+  background-clip: border-box;
+  -webkit-text-fill-color: inherit;
+  mix-blend-mode: normal;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.footer_apercu {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 10vh;
+  padding-right: 10px;
+  padding-left: 10px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-top: 2px solid #000;
+}
+
+.en_tete_apercu {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 10vh;
+  padding: 10px 20px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-bottom: 2px solid #000;
+}
+
+.liste_articles_parnier {
+  overflow: auto;
+  height: 80vh;
+}
+
+.panier_icon {
+  height: 100%;
+  margin-right: 10px;
+}
+
+.text-block-15 {
+  font-size: 18px;
+}
+
+.titre_apercu_panier {
+  margin-right: 5px;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.image-7 {
+  height: 50%;
+}
+
+.close {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  margin-left: 20px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.text-block-17 {
+  color: #ff4009;
+}
+
+.text-block-18 {
+  color: #ff4009;
+  font-size: 30px;
+}
+
+.total {
+  margin-right: 10px;
+  color: #ff4009;
+  font-size: 30px;
+}
+
+.total_euro {
+  color: #ff4009;
+  font-size: 30px;
+}
+
+.montant_total_panier {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+}
+
+.valider_panier {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 60%;
+  padding: 5px 10px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 20px;
+  background-color: #ff4009;
+  text-decoration: none;
+}
+
+.text-block-21 {
+  color: #fff;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.article_panier {
+  display: block;
+  height: 17%;
+  padding: 5px 7px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-bottom: 1px solid #727272;
+}
+
+.img_article_liste {
+  width: 17%;
+  height: 80%;
+  max-height: 80%;
+  max-width: 17%;
+  min-width: 16.9993%;
+}
+
+.details_article_panier {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 75%;
+  margin-bottom: 5px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.supprimer_article {
+  height: 10%;
+  color: #727272;
+}
+
+.text-block-22 {
+  font-size: 17px;
+}
+
+.text-block-23 {
+  font-size: 18px;
+}
+
+.text-block-24 {
+  font-size: 20px;
+}
+
+.text-block-25 {
+  color: #727272;
+  font-size: 20px;
+}
+
+.text-block-26 {
+  font-size: 20px;
+}
+
+.prix_article_panier {
+  color: #ff4009;
+  font-size: 20px;
+}
+
+.div-block-23 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+}
+
+.text-block-28 {
+  margin-right: 10px;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.gestion_qte_article_panier {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 40px;
+  margin-left: 10px;
+  padding: 5px 10px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border: 1px solid #000;
+  border-radius: 20px;
+}
+
+.qte {
+  height: 70%;
+}
+
+.nb_article_panier {
+  margin-right: 5px;
+  margin-left: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  font-size: 20px;
+}
+
+.infos_articles_panier {
+  margin-right: 5px;
+  max-width: 40%;
+}
+
+.link-block {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 150px;
+  height: 30px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  margin-left: 10px;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #727272;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.image-10 {
+  height: 100%;
+}
+
