--- a/vue/css/style_achat.css
+++ b/vue/css/style_achat.css
@@ -3328,10 +3328,10 @@ textarea.w-select {
 
 
 
-
+/* 
 #affichage_apercu_panier {
   display: none;
-}
+} */
 
 .apercu_panier {
   position: fixed;
