avancement dans la création de l'html et du css de la partie gestionnaire

--- a/vue/css/style_modification.css
+++ b/vue/css/style_modification.css
@@ -2574,7 +2574,7 @@ textarea.w-select {
   position: static;
   margin-bottom: 0px;
   font-weight: 700;
-  text-align: center;
+  text-align: left;
 }
 
 .field-label-2 {
