--- a/vue/css/style_achat.css
+++ b/vue/css/style_achat.css
@@ -1,8 +1,3 @@
-/* Generated on: Mon Oct 31 2022 13:48:06 GMT+0000 (Coordinated Universal Time) */
-/* ==========================================================================
-   normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css 
-   ========================================================================== */
-/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -2957,6 +2952,16 @@ textarea.w-select {
   color: #fff;
   font-size: 19px;
   text-align: center;
+}
+
+
+.text-content {
+  cursor: pointer;
+  opacity: 0;
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;
 }
 
 .user_message {
